Animaciones en CSS

--- a/prepractica/estilos.css
+++ b/prepractica/estilos.css
@@ -78,4 +78,6 @@ body{
     -webkit-box-shadow: inset -7px 3px 10px 1px rgba(26,33,43,0.8);
     -moz-box-shadow: inset -7px 3px 10px 1px rgba(26,33,43,0.8);
      box-shadow: inset -7px 3px 10px 1px rgba(26,33,43,0.8);
+
+     /* https://www.cssmatic.com/box-shadow */
 }
