--- a/coffee/css/estilos.css
+++ b/coffee/css/estilos.css
@@ -5,6 +5,7 @@
 body{
     background-color: whitesmoke;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 h1,h2,h3,h4,h5,h6{
     font-family: 'Noto Sans JP', sans-serif;
@@ -23,6 +24,7 @@ header{
     height: 70px;
     border-bottom: 1px solid #c1c1c1;
     width: 100%;
+    background-color: whitesmoke;
 }
 header > #logo{
     padding-top: 15px;
@@ -98,11 +100,69 @@ section#main .bola img{
 #numeros{
     border-left: 10px solid #19a49c;
     width: 100%;
-    height: 150px;
+    height: 100px;
     margin-top: 20px;
 }
-#numeros >.col >h5{
-    border-bottom: 1px solid #1d1d1d;
+#numeros >div >.col >h5{
+    /* border-bottom: 1px solid #1d1d1d; */
     font-size: 1.5rem;
     font-weight: lighter;
+}
+#news, #contact{
+    
+    width: 90%;
+    margin-left: 90px;
+    min-height: 300px;
+    display: block;
+    margin-top: 50px;
+}
+#news .columna3{
+    float:left;
+    width:25%;
+    margin-left:8%;
+}
+#news .columna3 a{
+    text-decoration: none;
+    color: #1d1d1d;
+}
+#news .columna3 a img{
+    width: 100%;
+    height: 90%;
+}
+#contact h2{
+    margin-top: 200px;
+}
+#contact fieldset{
+    border: none;
+    padding: 5px;
+}
+#contact fieldset label{
+    display: block;
+    width: 100%;
+}
+#contact fieldset input, #contact fieldset textarea{
+    display: block;
+    width: 90%;
+    border: 1px solid #eeeeee;
+    padding: 5px;
+    outline-color: #eeeeee;
+    height: 30px;
+}
+#contact fieldset button{
+    width: 150px;
+    height: 30px;
+    padding: 5px;
+    background-color: #19a49c;
+    color: white;
+    border: none;
+}
+footer{
+    text-align: center;
+    padding: 5px;
+    margin-top: 50px;
+    display: block;
+    width: 100%;
+    height: 70px;
+    background-color: #19a49c;
+    color: whitesmoke;
 }
